Read registration recovery passwords exclusively by PNI